Everithing Perfect to publish

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Flight Simulator</title>
-        <link rel = "stylesheet" type = "text/css" href = "styles.css" />
-        <script src = "scripts.js"></script>
+        <link rel = "stylesheet" type = "text/css" href = "./src/styles.css" />
+        <script src = "./src/scripts.js"></script>
     </head>
     <body>
         <div style="text-align: center;">
@@ -21,7 +21,7 @@
             </div>
             <div id = "shuttleBackground">            
                 <div class="rocket" id = "rocket">
-                    <img src = "LaunchCode_rocketline_white.png" height = "75" width = "75"  />
+                    <img src = "./images/LaunchCode_rocketline_white.png" height = "75" width = "75"  />
                 </div>
             </div>
             <div style = "text-align: center; display: inline-block;">
